--- a/app/react-app/public/index.html
+++ b/app/react-app/public/index.html
@@ -19,9 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="./js/jquery.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.js"></script>
     <title>React App</title>
   </head>
-  <body>
+  <body bgcolor="#c0c0c0">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
