--- a/app/sails-app/assets/index.html
+++ b/app/sails-app/assets/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  <script type="text/javascript" src="http://localhost:8080/app.js"></script></body>
+    <script src="https://apis.google.com/js/api:client.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/app.js"></script></body>
 </html>
-
