--- a/app/sails-app/assets/index.html
+++ b/app/sails-app/assets/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-app</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css" type="text/css">
-    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+    <title>Course registeration - IIT Palakkad</title>
+    <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
+    <link rel="stylesheet" href="./styles/sakura.css" type="text/css">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://apis.google.com/js/api:client.js"></script>
+    <script src="./js/google-api-client.js"></script>
     <script type="text/javascript" src="http://localhost:8080/app.js"></script></body>
 </html>
