Added bulma to my-courses and form of Create course

--- a/app/sails-app/assets/index.html
+++ b/app/sails-app/assets/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Course registeration - IIT Palakkad</title>
     <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
-    <link rel="stylesheet" href="./styles/sakura.css" type="text/css">
+    <link rel="stylesheet" href="./styles/bulma.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app"></div>
