--- a/app/sails-app/assets/index.html
+++ b/app/sails-app/assets/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Course registeration - IIT Palakkad</title>
-    <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
-    <link rel="stylesheet" href="./styles/bulma.css" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script src="./js/google-api-client.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/app.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>IIT Palakkad - Course Registeration</title><script type=text/javascript src=/static/google-api-client.js></script><link href=/static/css/app.91a07130f31afc42a89ef941ad33a851.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.753f78dc7934b0a29fd7.js></script><script type=text/javascript src=/static/js/vendor.bdcd06f7043948bfb77d.js></script><script type=text/javascript src=/static/js/app.fc20911a44d8966d0226.js></script></body></html>
