--- a/app/vue-app/index.html
+++ b/app/vue-app/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-app</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css" type="text/css">
-  	<link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+    <title>IIT Palakkad - Course Registeration</title>
+    <script type="text/javascript" src="/static/google-api-client.js"></script>
   </head>
   <body>
     <div id="app"></div>
